--- a/Part3/index.html
+++ b/Part3/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <title>03. JavaScript детальней</title>
-    <script src="01-number.js"></script>
+    <script src="02-strings.js"></script>
   </head>
   <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
