--- a/Part3/index.html
+++ b/Part3/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <title>03. JavaScript детальней</title>
-    <script src="02-strings.js"></script>
+    <script src="04-date.js" defer></script>
   </head>
   <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
@@ -30,6 +30,7 @@
           <button class="btn btn-small btn-danger" id="time">Время</button>
         </div>
       </div>
+      
     </div>
   </body>
 </html>
